# slicer-engine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_VIEWER.md  Makefile  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  build.rs  output.gcode  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: build.yml  deploy-docs.yml
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.ts  gcode.tmLanguage.json
orca/: 3DBenchy.gcode  simple-cube.gcode
plan/: architecture-cli-layer-1.md  feature-schema-descriptions-issue-45.md  vg1-vg2-mesh-and-settings.md
src/: SLICING.md  core.rs  cpp_shims.rs  gcode.rs  lib.rs  logging.md  logging.rs  main.rs  ws_protocol.rs
src/arachne/: README.md  beads.rs  mod.rs  types.rs
src/cli/: README.md  emit.rs  error.rs  mod.rs  output.rs  schemas.rs
src/cli/commands/: config.rs  gen_schemas.rs  info.rs  mod.rs  serve.rs  settings.rs  slice.rs
src/cli/io/: mod.rs  validation.rs
src/config/: README.md  io.rs  mod.rs  types.rs
src/core/: README.md  infill.rs  mod.rs  pipeline.rs  slicer.rs  surfaces.rs  types.rs  walls.rs
src/db/: README.md  history_tests.rs  migrator.rs  mod.rs
src/db/entities/: files.rs  mod.rs  requests.rs
src/db/migrations/: m20250101_000001_initial.rs  mod.rs
src/debug/: mod.rs  svg.rs  types.rs
src/gcode/: README.md  arc_fitting.rs  dialect.rs  flavor.rs  generator.rs  mod.rs  simplify.rs  source.rs
src/gcode/dialects/: klipper.rs  marlin.rs  mod.rs
src/gcode_viewer/: mod.rs  parser.rs  types.rs  wasm.rs
src/infill/: README.md  crosshatch.rs  grid.rs  gyroid.rs  honeycomb.rs  mod.rs  rectilinear.rs  tpms_d.rs  utils.rs
src/mesh/: README.md  analysis.rs  io.rs  mod.rs  transforms.rs  types.rs
src/orient/: README.md  candidates.rs  geometry.rs  mod.rs  pack.rs  types.rs
src/scene/: README.md  bed.rs  loader.rs  mod.rs  ops.rs  state.rs  transform.rs  wasm.rs
src/server/: README.md  handlers.rs  mod.rs  ws_session.rs
src/settings/: README.md  diff.rs  mod.rs  params.rs  persistence.rs  profile.rs  validator.rs
stls/: 3DBenchy.gcode
tests/: scene_parity.rs
tests/fixtures/: global.json  object.json  simple-cube-ascii.stl  simple-cube.3mf  simple-cube.gcode  simple-cube.stl
tools/: wasm32-clang++.cmd  wasm32-clang++.js
ui/: README.md  THEME.md  angular.json  package-lock.json  package.json  proxy.conf.json  vite.config.js
ui-desktop/: package.json
ui-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui-desktop/src-tauri/capabilities/: default.json
ui-desktop/src-tauri/src/: commands.rs  main.rs
ui-desktop/src-tauri/src/bridge/: mod.rs  runtime_bridge.rs  tauri_logger.rs
ui/src/: index.html  mock.html  styles.scss  tinykeys.d.ts
ui/src/app/: app-routes.ts  app.config.ts  app.html  app.scss  app.spec.ts  app.ts
ui/src/app/components/3d-view-toolbar/: 3d-view-toolbar.css  3d-view-toolbar.html  3d-view-toolbar.ts
ui/src/app/components/card/: card.css  card.ts
ui/src/app/components/code-editor/: code-editor.component.ts  code-editor.ts
ui/src/app/components/connection-state/: connection-state.html  connection-state.scss  connection-state.ts
ui/src/app/components/debug-viewer/: debug-viewer.component.html  debug-viewer.component.scss  debug-viewer.component.ts
ui/src/app/components/file-upload/: file-upload.component.html  file-upload.component.scss  file-upload.component.ts  file-upload.ts
ui/src/app/components/history-panel/: history-panel.component.html  history-panel.component.scss  history-panel.component.ts  history-panel.ts
ui/src/app/components/list-history/: list-history.component.html  list-history.component.scss  list-history.component.ts  list-history.ts
ui/src/app/components/logo/: logo.css  logo.html  logo.ts
ui/src/app/components/notification-center/: notification-center.component.html  notification-center.component.scss  notification-center.component.ts  notification-center.ts
ui/src/app/components/settings-panel/: settings-panel.component.html  settings-panel.component.scss  settings-panel.component.ts  settings-panel.ts
ui/src/app/components/slice-layer-bar/: slice-layer-bar.html  slice-layer-bar.scss  slice-layer-bar.ts
ui/src/app/components/slice-preview-controls/: slice-preview-controls.html  slice-preview-controls.scss  slice-preview-controls.ts
ui/src/app/components/slice-segment-bar/: slice-segment-bar.html  slice-segment-bar.scss  slice-segment-bar.ts
ui/src/app/components/status-panel/: status-panel.component.html  status-panel.component.scss  status-panel.component.ts  status-panel.ts
ui/src/app/components/viewer/: README.md  chunked-line-geometry.ts  gcode-layer-renderer.ts  gcode-loader.ts  gizmo.ts  index.ts  (+8 more)
ui/src/app/models/: slice-settings.model.ts
ui/src/app/schema-form/: schema-form.component.html  schema-form.component.scss  schema-form.component.ts  schema-form.ts
ui/src/app/services/: app-theme.ts  browser-storage.ts  dialog.ts  editor-panel.ts  gcode-preview.service.ts  gcode-preview.ts  history.ts  logger.service.ts  logger.ts  notifications.ts  print-area.ts  scene-engine.service.ts  scene-engine.ts  slicer-connection.ts  slicer-file.ts  slicer.service.ts  slicer.ts  upload-guard.ts  viewer-control.ts  websocket.service.ts
ui/src/environments/: environment.prod.ts  environment.ts  environment.web-slicer.ts
ui/src/styles/: README.md  _mixins.scss  main.scss
ui/src/styles/base/: _focus.scss  _forms.scss  _reset.scss  _scrollbar.scss  _typography.scss
ui/src/styles/theme/: _dark.scss  _light.scss  _tokens.scss
ui/src/styles/utilities/: _utilities.scss
(+109 files in other folders)
