[package]
name = "slicer-engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "slicer-engine"

[features]
default = []
web-slicer = ["dep:clipper2"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
stl_io = "0.11"
quick-xml = { version = "0.39", features = ["serialize"] }
dirs = "6.0.0"
toml = { version = "0.9.8", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
glam = { version = "0.29", features = ["serde"] }
thiserror = "2.0"
serde_bytes = "0.11"
tobj = "4.0"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipper2 = "0.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
rayon = "1.10"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
actix-web = "4.13"
actix-files = "0.6"
actix-ws = "0.4"
actix-multipart = "0.7.2"
actix-cors = "0.7"
base64 = "0.22"
futures-util = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "io-util",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
clipper2 = { version = "0.5", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Note: Use `cargo build` for fast dev builds
# Use `cargo build --release` only for CI/distribution

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
